--- a/koepka.Rmd
+++ b/koepka.Rmd
@@ -25,6 +25,7 @@ koepka <- koepka %>%
          hole = `Hole #`, 
          round = `Round #`, 
          finalround = `Final Round`, 
+         win = `Win`, 
          event = `Event Name`, 
          course = `Course Name`, 
          par = Par, 
@@ -42,15 +43,62 @@ koepka <- koepka %>%
          sg_ott = `OTT Strokes Gained`, 
          sg_app = `APP Strokes Gained`, 
          sg_arg = `ARG Strokes Gained`) %>% 
-  select(tour, year, schedule_num, lastname, firstname, hole, round, finalround, event, course, par, scorecard_yard,   actual_yard, score, fairway, green, drive, approach, putt, putts_gained , sg_t2g , sg_total, sg_ott, sg_app, sg_arg)
-```
+  select(tour, year, schedule_num, lastname, firstname, hole, round, finalround, win, event, course, par, scorecard_yard, actual_yard, score, fairway, green, drive, approach, putt, putts_gained , sg_t2g , sg_total, sg_ott, sg_app, sg_arg)
 
-```{r}
 koepka <- koepka %>% 
   group_by(event) %>% 
-  summarize(t2g = mean(sg_t2g), total = mean(sg_total), ott = mean(sg_ott), app = mean(sg_app), arg = mean(sg_arg))
+  summarize(win = mean(win), t2g = mean(sg_t2g), total = mean(sg_total), ott = mean(sg_ott), app = mean(sg_app), arg = mean(sg_arg))
 
+koepka$win <- as.character(koepka$win)
+
+koepka <- koepka %>% 
+  mutate(win = case_when(win == 0 ~ "Did Not Win", 
+                   win == 1 ~ "Won Tournamnet"))
+
+koepka
 write_rds(koepka, "koepka_app/koepka.rds", compress = "none")
+```
+
+
+```{r}
+#Tiger Woods code
+woods <- read_excel("~/Data/Final-Project/Woods2018.xlsx")
+
+woods <- woods %>% 
+  rename(tour = Tour, 
+         year = `Tournament Year`, 
+         schedule_num = `Tournament Schedule #`, 
+         lastname = `Last Name`, 
+         firstname = `First Name`, 
+         hole = `Hole #`, 
+         round = `Round #`, 
+         finalround = `Final Round`, 
+         win = `Win`, 
+         event = `Event Name`, 
+         course = `Course Name`, 
+         par = Par, 
+         scorecard_yard = `Scorecard Yard`, 
+         actual_yard = `Actual Yard`, 
+         score = `Score`, 
+         fairway = `Hit Fwy`, 
+         green = `Hit Green`, 
+         drive = `Driving Distance (rounded)`,
+         approach = `Appr Shot Dist to the Pin`, 
+         putt = `Made Putt Distance`, 
+         putts_gained = `Putts Gained`, 
+         sg_t2g = `SG T2G`, 
+         sg_total = `SG Total`, 
+         sg_ott = `OTT Strokes Gained`, 
+         sg_app = `APP Strokes Gained`, 
+         sg_arg = `ARG Strokes Gained`) %>% 
+  select(tour, year, schedule_num, lastname, firstname, hole, round, finalround, win, event, course, par, scorecard_yard, actual_yard, score, fairway, green, drive, approach, putt, putts_gained , sg_t2g , sg_total, sg_ott, sg_app, sg_arg)
+
+woods <- woods %>% 
+  group_by(event) %>% 
+  summarize(win = mean(win), t2g = mean(sg_t2g), total = mean(sg_total), ott = mean(sg_ott), app = mean(sg_app), arg = mean(sg_arg))
+
+
+write_rds(woods, "koepka_app/woods.rds", compress = "none")
 ```
 
 
